[tool.poetry]
name = "rdklib-debugging"
version = "0.1.0"
description = "CLOUDENG-1969"
authors = ["BBC <cloudeng@bbc.co.uk>"]
license = "UNLICENSED"
readme = "README.md"
packages = [{include = "rdklib_debugging"}]

[tool.poetry.dependencies]
python = "^3.11"
rdklib = "^0.3.3"
aws-lambda-powertools = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
